force-app/main/default/objects/OpportunityLineItem/fields/Cuota_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Mensual__c</fullName>
    <formula>Monto_Planilla__c *  (Porcentaje_Aporte__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuota Mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>