force-app/main/default/objects/OpportunityLineItem/fields/Monto_Planilla__c.field-meta.xml
<CustomField>
    <fullName>Monto_Planilla__c</fullName>
    <label>Monto Planilla</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>