force-app/main/default/objects/OpportunityLineItem/fields/Porcentaje_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Aporte__c</fullName>
    <label>Porcentaje Aporte</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>