force-app/main/default/objects/OpportunityLineItem/fields/Promedio_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Promedio_Ingreso__c</fullName>
    <formula>Monto_Planilla__c /  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio Ingreso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>